# kyfd

./: README  README.md  configure.ac
src/include/: component-arc.h  component-map.h  component-weight.h  decoder-config.h  decoder.h  fst-node.h
src/include/kyfd/: Makefile.am  api.h
src/lib/: Makefile.am  api.cc  decoder-config.cc  decoder.cc  string-manager.cc
